--- a/src/app/styles/vars.scss
+++ b/src/app/styles/vars.scss
@@ -13,4 +13,7 @@
   // Constants
   --header-height: 86px;
   --sidebar-width: clamp(280px, 32vw, 420px);
+
+  --width-scrollbar: 0.2em;
+
 }
